[package]
name = "softfp-sys"
version = "0.1.0"
authors = ["Thomas Hiscock <thomash000@gmail.com>"]
edition = "2018"
repository = "https://github.com/thomashk0/softfp-sys.git"
homepage = "https://github.com/thomashk0/softfp-sys"
description = "Low-level bindings around the SoftFP library (from Fabrice Bellard)"
readme = "README.md"
license = "MIT"
include = ["src/*", "build.rs", "Cargo.toml", "README.md", "LICENSE.txt", "softfp/*.c", "softfp/*.h"]
categories = ["external-ffi-bindings"]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
cc = "1.0"
